.metadata/.plugins/org.eclipse.cdt.ui/Example2_FreeRtos.build.log
15:23:00 **** Incremental Build of configuration Debug for project Example2_FreeRtos ****
make -j16 all 
arm-none-eabi-gcc "../main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -c -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"main.d" -MT"main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "main.o"
Error: Cannot find the specified linker script. Check the linker settings in the build configuration.
make: *** [makefile:85: fail-specified-linker-script-missing] Error 2
make: *** Waiting for unfinished jobs....
../main.c:1:9: error: #include expects "FILENAME" or <FILENAME>
    1 | #include
      |         ^
make: *** [subdir.mk:19: main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

15:23:00 Build Failed. 5 errors, 0 warnings. (took 71ms)

